[gd_scene load_steps=44 format=2]

[ext_resource path="res://assets/sprite/characters/girl-player/walk/P10005.png" type="Texture" id=1]
[ext_resource path="res://assets/sprite/characters/girl-player/walk/P10006.png" type="Texture" id=2]
[ext_resource path="res://assets/sprite/characters/girl-player/walk/P10007.png" type="Texture" id=3]
[ext_resource path="res://assets/sprite/characters/girl-player/walk/P10008.png" type="Texture" id=4]
[ext_resource path="res://assets/sprite/characters/girl-player/walk/P10009.png" type="Texture" id=5]
[ext_resource path="res://assets/sprite/characters/girl-player/walk/P10010.png" type="Texture" id=6]
[ext_resource path="res://assets/sprite/characters/girl-player/walk/P10011.png" type="Texture" id=7]
[ext_resource path="res://assets/sprite/characters/girl-player/walk/P10012.png" type="Texture" id=8]
[ext_resource path="res://assets/sprite/characters/girl-player/walk/P10013.png" type="Texture" id=9]
[ext_resource path="res://assets/sprite/characters/girl-player/walk/P10014.png" type="Texture" id=10]
[ext_resource path="res://assets/sprite/characters/girl-player/walk/P10015.png" type="Texture" id=11]
[ext_resource path="res://assets/sprite/characters/girl-player/walk/P10016.png" type="Texture" id=12]
[ext_resource path="res://assets/sprite/characters/girl-player/walk/P10017.png" type="Texture" id=13]
[ext_resource path="res://assets/sprite/characters/girl-player/attack_1/P10020.png" type="Texture" id=14]
[ext_resource path="res://assets/sprite/characters/girl-player/attack_1/P10023.png" type="Texture" id=15]
[ext_resource path="res://assets/sprite/characters/girl-player/attack_1/P10022.png" type="Texture" id=16]
[ext_resource path="res://assets/sprite/characters/girl-player/attack_1/P10019.png" type="Texture" id=17]
[ext_resource path="res://assets/sprite/characters/girl-player/attack_1/P10021.png" type="Texture" id=18]
[ext_resource path="res://assets/sprite/characters/girl-player/attack_1/P10018.png" type="Texture" id=19]
[ext_resource path="res://assets/sprite/characters/girl-player/attack_1/P10024.png" type="Texture" id=20]
[ext_resource path="res://assets/sprite/characters/girl-player/attack_1/P10025.png" type="Texture" id=21]
[ext_resource path="res://assets/sprite/characters/girl-player/attack_1/P10026.png" type="Texture" id=22]
[ext_resource path="res://assets/sprite/characters/girl-player/attack_1/P10027.png" type="Texture" id=23]
[ext_resource path="res://assets/sprite/characters/girl-player/climbing/Chibi36.png" type="Texture" id=24]
[ext_resource path="res://assets/sprite/characters/girl-player/climbing/Chibi35.png" type="Texture" id=25]
[ext_resource path="res://assets/sprite/characters/girl-player/climbing/Chibi37.png" type="Texture" id=26]
[ext_resource path="res://assets/sprite/characters/girl-player/jump/Chibi29.png" type="Texture" id=27]
[ext_resource path="res://assets/sprite/characters/girl-player/jump/Chibi30.png" type="Texture" id=28]
[ext_resource path="res://assets/sprite/characters/girl-player/jump/Chibi32.png" type="Texture" id=29]
[ext_resource path="res://assets/sprite/characters/girl-player/pose/P10000.png" type="Texture" id=30]
[ext_resource path="res://assets/sprite/characters/girl-player/pose/P10001.png" type="Texture" id=31]
[ext_resource path="res://assets/sprite/characters/girl-player/pose/P10002.png" type="Texture" id=32]
[ext_resource path="res://assets/sprite/characters/girl-player/pose/P10003.png" type="Texture" id=33]
[ext_resource path="res://assets/sprite/characters/girl-player/walk/P10004.png" type="Texture" id=34]
[ext_resource path="res://gamedata/script/test_controller.gd" type="Script" id=35]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 17 ), ExtResource( 14 ), ExtResource( 18 ), ExtResource( 16 ), ExtResource( 15 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ) ],
"loop": true,
"name": "attack",
"speed": 12.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 24 ), ExtResource( 26 ) ],
"loop": true,
"name": "climbing",
"speed": 5.0
}, {
"frames": [ ExtResource( 34 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "walk",
"speed": 13.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 29 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15.6577, 57.3069 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 37.5035
height = 0.0

[sub_resource type="Animation" id=4]
resource_name = "attack"
length = 1.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("player_sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "attack" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("player_sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 4, 3, 2, 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("player_sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "fall"
tracks/0/type = "value"
tracks/0/path = NodePath("player_sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "fall" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("player_sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("player_sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.4, 0.4 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("collision_body:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -8.107, 112.239 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("collision_body:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 14.7914 ]
}

[sub_resource type="Animation" id=6]
length = 0.65
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("player_sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("player_sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("player_sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("collision_body:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 5.893, 120.239 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("collision_body:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "jump"
length = 1.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("player_sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "jump" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("player_sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("player_sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0.4, 0.4 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("collision_body:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -10.107, 114.239 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("collision_body:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 13.3362 ]
}

[sub_resource type="Animation" id=8]
length = 1.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("player_sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "walk" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("player_sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("player_sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("collision_body:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 5.893, 120.239 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("collision_body:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="girl-player" type="KinematicBody2D"]
script = ExtResource( 35 )

[node name="player_sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"
offset = Vector2( 22, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="collision_body" type="CollisionShape2D" parent="."]
position = Vector2( 5.893, 120.239 )
shape = SubResource( 2 )

[node name="collision_head" type="CollisionShape2D" parent="."]
position = Vector2( -0.59494, 30.7187 )
shape = SubResource( 3 )

[node name="anim_player" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 4 )
anims/double_attack = SubResource( 4 )
anims/fall = SubResource( 5 )
anims/idle = SubResource( 6 )
anims/jump = SubResource( 7 )
anims/walk = SubResource( 8 )
